Closed Bug 1341409 Opened 8 years ago Closed 8 years ago

Advanced constraints stopped working in FF50

Categories

(Core :: WebRTC: Audio/Video, defect, P1)

50 Branch
defect

Tracking

()

VERIFIED FIXED
mozilla54
Tracking Status
firefox-esr45 --- unaffected
firefox51 --- wontfix
firefox52 + verified
firefox-esr52 --- fixed
firefox53 + verified
firefox54 + verified

People

(Reporter: jib, Assigned: jib)

References

Details

(Keywords: regression)

Attachments

(1 file)

STR: 1. Open https://jsfiddle.net/jib1/9f6ztq8v/ and share camera. Expected result: 1280x720 or 1024x576 or 640x360 (assuming your camera supports it) Actual result: 640x480
[Tracking Requested - why for this release]: Would love to get this in 52, to avoid regressing ESR. Simple and harmless patch.
Comment on attachment 8839651 [details] Bug 1341409: Fix omission of advanced constraints in applying camera constraints. https://reviewboard.mozilla.org/r/114224/#review115778
Attachment #8839651 - Flags: review?(rjesup) → review+
Please nominate this ASAP. Patch is super-simple and safe
Pushed by jbruaroey@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/0865a8fbbcc5 Fix omission of advanced constraints in applying camera constraints. r=jesup
Comment on attachment 8839651 [details] Bug 1341409: Fix omission of advanced constraints in applying camera constraints. [Approval Request Comment] If this is not a sec:{high,crit} bug, please state case for ESR consideration: Avoid regressing this feature in ESR. User impact if declined: Advanced camera/mic constraints stop working. Fix Landed on Version: 54 Risk to taking this patch (and alternatives if risky): Very low risk. Simple safe patch (code ahead of for-loop starting at 1 forgot to initialize "mAdvanced" member of always-present zeroeth entry, like is done for subsequent entries). String or UUID changes made by this patch: None Approval Request Comment [Feature/Bug causing the regression]: Bug 1213517 [User impact if declined]: See above [Is this code covered by automated tests?]: No. Tests are blocked on bug 1088621. [Has the fix been verified in Nightly?]: Just landed, but verified locally. [Needs manual test from QE? If yes, steps to reproduce]: Yes. Use STRs in comment 0. [List of other uplifts needed for the feature/fix]: None [Is the change risky?]: No [Why is the change risky/not risky?]: See above [String changes made/needed]: None
Attachment #8839651 - Flags: approval-mozilla-esr52?
Attachment #8839651 - Flags: approval-mozilla-beta?
Attachment #8839651 - Flags: approval-mozilla-aurora?
s/member of/member with/
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Comment on attachment 8839651 [details] Bug 1341409: Fix omission of advanced constraints in applying camera constraints. webrtc fix for aurora53/beta52 clearing esr52 flag, it'll be synced from beta.
Attachment #8839651 - Flags: approval-mozilla-esr52?
Attachment #8839651 - Flags: approval-mozilla-beta?
Attachment #8839651 - Flags: approval-mozilla-beta+
Attachment #8839651 - Flags: approval-mozilla-aurora?
Attachment #8839651 - Flags: approval-mozilla-aurora+
I can verify that this bug has been fixed. To test, I followed the STR in comment 0 in nightly 54.0a1 on Ubuntu. The result I got after sharing the camera is 640x360.
Status: RESOLVED → VERIFIED
Reproduced the issue with an affected build (50.1.0, 20161208153507) using the instructions from Comment 9 on Ubuntu 16.04 x64. The output was 640x480. This is verified fixed on Ubuntu 16.04 x64, Windows 10 x64 and macOS 10.12.3 using: - 52.0b9-build2 (20170223185858) - 53.0a2 (2017-02-24) - 54.0a1 (2017-02-24) The test page now shows 640x360 (Windows, Linux) and 1024x576 (macOS), upon camera sharing.
We don't have the plan to have dot release for 51. Mark 51 won't fix.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: