Bug 1341409 - Fix omission of advanced constraints in applying camera constraints. r=jesup, a=jcristau

MozReview-Commit-ID: 2qhuv5e6lv9